K8S Examples/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: f5demo-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: kic-ns 
---
apiVersion: v1
kind: Namespace
metadata:
  name: vsroute-ns
