K8S Examples/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  demo-service
spec:
  selector:
    app:  f5-demo-httpd
  type:  NodePort
  ports:
  - port:  80
    targetPort:  80
    nodePort: 30080
