K8S Examples/service_clusterip.yaml
kind: Service
apiVersion: v1
metadata:
  name: demo-service-clusterip
spec:
  selector:
    app: f5-demo-httpd
  type: ClusterIP
  ports:
  - port: 80
