K8S Examples/service_nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: demo-service-nodeport
  namespace: f5demo-ns
spec:
  selector:
    app: f5-demo-httpd
  type: NodePort
  ports:
  - port:  80
    targetPort:  80
    nodePort: 30080
