K8S Examples/service_status_nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: status-service-nodeport
  namespace: kic-ns
spec:
  selector:
    app: my-release-nginx-ingress
  type: NodePort
  ports:
  - port:  8080
    targetPort:  8080
    nodePort: 30080
