K8S Examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  # ingressClassName: nginx
  rules:
  - host: demof5.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-service-clusterip
            port:
              number: 80
